v5.0.0/_sources/generated/pcdsdevices.cvmi_motion.CVMI.rst.txt
pcdsdevices.cvmi\_motion.CVMI
=============================

.. currentmodule:: pcdsdevices.cvmi_motion

.. autoclass:: CVMI

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - gas_jet_x
          - :class:`~pcdsdevices.epics_motor.BeckhoffAxis`
          - ``:MMS:01``
          - 
          - normal
          - 
    
        * - gas_jet_y
          - :class:`~pcdsdevices.epics_motor.BeckhoffAxis`
          - ``:MMS:02``
          - 
          - normal
          - 
    
        * - gas_jet_z
          - :class:`~pcdsdevices.epics_motor.BeckhoffAxis`
          - ``:MMS:03``
          - 
          - normal
          - 
    
        * - gas_needle_x
          - :class:`~pcdsdevices.epics_motor.BeckhoffAxis`
          - ``:MMS:04``
          - 
          - normal
          - 
    
        * - gas_needle_y
          - :class:`~pcdsdevices.epics_motor.BeckhoffAxis`
          - ``:MMS:05``
          - 
          - normal
          - 
    
        * - gas_needle_z
          - :class:`~pcdsdevices.epics_motor.BeckhoffAxis`
          - ``:MMS:06``
          - 
          - normal
          - 
    
        * - sample_paddle
          - :class:`~pcdsdevices.epics_motor.BeckhoffAxis`
          - ``:MMS:07``
          - 
          - normal
          - 
    

    
    
    
    
    
    
    
    
    
    
    
    
    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: get
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: stage_group_instances
    .. automethod:: status
    .. automethod:: stop
    .. automethod:: summary
    .. automethod:: trigger
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: hints
    .. autoattribute:: kind
    .. autoattribute:: needs_parent
    .. autoattribute:: stage_group
    
    